--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
 
         <div class="tab-pane fade" id="news" role="tabpanel" aria-labelledby="news-tab">
-          <div class="row">
+          <div class="row">раздел будет запущен/сформирован до 22.02.2019
 
             <!--             <div class="col-sm">
               <ul id="">
@@ -329,7 +329,7 @@
 
 
         <div class="tab-pane fade" id="media" role="tabpanel" aria-labelledby="media-tab">
-          <div class="row">
+          <div class="row">раздел будет запущен/сформирован до 14.02.2019
 
             <!--             <div class="col-sm">
               <ul id="">
@@ -421,7 +421,7 @@
 
 
         <div class="tab-pane fade" id="games" role="tabpanel" aria-labelledby="games-tab">
-          <div class="row">
+          <div class="row">раздел будет запущен/сформирован до 16.02.2019
 
             <!--             <div class="col-sm">
               <ul id="">
@@ -830,7 +830,7 @@
 
 
         <div class="tab-pane fade" id="bank" role="tabpanel" aria-labelledby="bank-tab">
-          <div class="row">
+          <div class="row">раздел будет запущен/сформирован до 20.02.2019
 
             <!--             <div class="col-sm">
               <ul id="">
@@ -922,7 +922,7 @@
 
 
         <div class="tab-pane fade" id="komynal" role="tabpanel" aria-labelledby="komynal-tab">
-          <div class="row">
+          <div class="row">раздел будет запущен/сформирован до 18.02.2019
 
 <!--             <div class="col-sm">
               <ul id="">
@@ -1088,12 +1088,12 @@
               <ul id="">
                 <span class="badge badge-primary">*Городок-2*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/google.ico" alt="github"><a href="https://www.google.com.ua/" target="_blank">здесь будет инфо по городу №2</a></li>
               </ul>
               <ul id="">
                 <span class="badge badge-dark">*Городок-3*</span>
                 <hr>
-                <li><img class="icon" src="img/nnm-club.ico" alt="nnm-club"><a href="http://nnm-club.me/" target="_blank">Nnm-club</a></li>
+                <li><img class="icon" src="img/google.ico" alt="nnm-club"><a href="https://www.google.com.ua/" target="_blank">здесь будет инфо по городу №3</a></li>
               </ul>
             </div>
 
@@ -1101,12 +1101,12 @@
               <ul id="">
                 <span class="badge badge-warning">*Городок-4*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/google.ico" alt="github"><a href="https://www.google.com.ua/" target="_blank">здесь будет инфо по городу №4</a></li>
               </ul>
               <ul id="">
                 <span class="badge badge-success">*Городок-5*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/google.ico" alt="github"><a href="https://www.google.com.ua/" target="_blank">здесь будет инфо по городу №5</a></li>
               </ul>
             </div>
 
