--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
                 <span class="badge badge-dark">*Новости*</span>
                 <hr>
                 <li><img class="icon" src="img/ukr.net.ico" alt="ukr.net"><a href="https://www.ukr.net/" target="_blank">Ukr.net</a></li>
+                <li><img class="icon" src="img/unian.net.ico" alt="ukr.net"><a href="https://www.unian.net/" target="_blank">Unian.net</a></li>				
                 <li><img class="icon" src="img/sis.at.ua.ico" alt="sis.at.ua"><a href="http://sis.at.ua/" target="_blank">Нужные ШТУЧКИ!</a></li>
               </ul>
               <ul id="">
@@ -113,13 +114,22 @@
               <ul id="">
                 <span class="badge badge-dark">*Рынок*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/novaposhta.ua.ico" alt="github"><a href="https://novaposhta.ua/ru/tracking" target="_blank">novaposhta.ua</a></li>
+                <li><img class="icon" src="img/olx.ua.ico" alt="github"><a href="https://www.olx.ua/" target="_blank">olx.ua</a></li>
+                <li><img class="icon" src="img/besplatka.ua.ico" alt="github"><a href="https://besplatka.ua/" target="_blank">besplatka.ua</a></li>
+                <li><img class="icon" src="img/shafa.ua.png" alt="github"><a href="https://shafa.ua/" target="_blank">shafa.ua</a></li>
+                <li><img class="icon" src="img/auto.ria.com.ico" alt="github"><a href="https://auto.ria.com/" target="_blank">auto.ria.com</a></li>
               </ul>
               <ul id="">
                 <span class="badge badge-dark">*Магазины*</span>
                 <hr>
                 <li><img class="icon" src="img/letyshops.com.ico" alt="github"><a href="https://letyshops.com/ua/soc/sh-1?r=2739789" target="_blank">Letyshops.com</a><span class="opisi">Покупки дешевле</span></li>
                 <li><img class="icon" src="img/smarty.sale.ico" alt="github"><a href="https://smarty.sale/1197327" target="_blank">Smarty.sale</a><span class="opisi">Умные покупки</span></li>
+                <li><img class="icon" src="img/ek.ua.ico" alt="github"><a href="http://ek.ua/" target="_blank">ek.ua</a></li>
+                <li><img class="icon" src="img/rozetka.com.ua.ico" alt="github"><a href="https://letyshops.com/r/rozetka-4qh7st5csxa88w" target="_blank">rozetka.com.ua</a></li>
+                <li><img class="icon" src="img/moyo.ua.ico" alt="github"><a href="https://letyshops.com/r/moyo-ua-4qh7st5csxogcc" target="_blank">moyo.ua</a></li>
+                <li><img class="icon" src="img/xiaomi.ua.ico" alt="github"><a href="https://letyshops.com/r/xiaomi-ua-4qh7st5csy680o" target="_blank">xiaomi.ua</a></li>
+                <li><img class="icon" src="img/apteka911.com.ua.ico" alt="github"><a href="https://letyshops.com/r/apteka-911-4qh7st5ct08woo" target="_blank">apteka911.com.ua</a></li>
               </ul>
               <ul id="">
                 <span class="badge badge-dark">*Банкинг*</span>
