--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="collapse navbar-collapse text-center" id="navbarCollapse">
 
           <ul class="nav nav-pills mb-3 navbar-nav" id="pills-tab" role="tablist">
-            <li class="nav-item"><a class="nav-link active" onclick="topFunction()" id="glavnaya-tab" data-toggle="pill" href="#glavnaya" role="tab" aria-controls="glavnaya" aria-selected="true">Главная</a></li>
+            <li class="nav-item"><a class="nav-link active" onclick="topFunction()" id="glavnaya-tab" data-toggle="pill" href="#glavnaya" role="tab" aria-controls="glavnaya" aria-selected="true"><img class="pict-menu" src="img/home003.png" alt="github"><!-- Главная --></a></li>
             <li class="nav-item"><a class="nav-link" onclick="topFunction()" id="sosseti-tab" data-toggle="pill" href="#sosseti" role="tab" aria-controls="sosseti" aria-selected="false">Социум</a></li>
             <li class="nav-item"><a class="nav-link" onclick="topFunction()" id="news-tab" data-toggle="pill" href="#news" role="tab" aria-controls="news" aria-selected="false">Новости</a></li>
             <li class="nav-item"><a class="nav-link" onclick="topFunction()" id="media-tab" data-toggle="pill" href="#media" role="tab" aria-controls="media" aria-selected="false">Медиа</a></li>
@@ -55,8 +55,9 @@
             <li class="nav-item"><a class="nav-link" onclick="topFunction()" id="bank-tab" data-toggle="pill" href="#bank" role="tab" aria-controls="bank" aria-selected="false">Банкинг</a></li>
             <li class="nav-item"><a class="nav-link" onclick="topFunction()" id="komynal-tab" data-toggle="pill" href="#komynal" role="tab" aria-controls="komynal" aria-selected="false">Комуналка</a></li>
             <li class="nav-item"><a class="nav-link" onclick="topFunction()" id="drygoe-tab" data-toggle="pill" href="#drygoe" role="tab" aria-controls="drygoe" aria-selected="false">Другое</a></li>
-            <li class="nav-item"><a class="nav-link" onclick="topFunction()" id="gorodok-tab" data-toggle="pill" href="#gorodok" role="tab" aria-controls="gorodok" aria-selected="false">Городок</a></li>
-            <li class="nav-item"><a class="nav-link" onclick="topFunction()" id="rek-tab" data-toggle="pill" href="#rek" role="tab" aria-controls="rek" aria-selected="false">Реклама</a></li>
+            <li class="nav-item"><a class="nav-link" onclick="topFunction()" id="gorodok-tab" data-toggle="pill" href="#gorodok" role="tab" aria-controls="gorodok" aria-selected="false"><font color="#14e6a3">Городок</font></a></li>
+            <li class="nav-item"><a class="nav-link" onclick="topFunction()" id="rek-tab" data-toggle="pill" href="#rek" role="tab" aria-controls="rek" aria-selected="false"><font color="#14e6a3">Реклама</font></a></li>
+            <li class="nav-item"><a class="nav-link" onclick="topFunction()" id="progsis-tab" data-toggle="pill" href="#progsis" role="tab" aria-controls="progsis" aria-selected="false"><!-- <font color="#14e6a3">!</font> --><img class="pict-menu" src="img/progsis004.png" alt="github"></a></li>
           </ul>
 
         </div>
@@ -1215,6 +1216,96 @@
           </div>
         </div>
 
+
+        <div class="tab-pane fade" id="progsis" role="tabpanel" aria-labelledby="progsis-tab">
+          <div class="row">здесь (со временем) будут ссылки на всякие программы, плагины, утилиты, и т.п.
+
+            <!--             <div class="col-sm">
+              <ul id="">
+                <span class="badge badge-primary">*Підгрупа-СИНЯЯ*</span>
+                <hr>
+                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+              </ul>
+              <ul id="">
+                <span class="badge badge-dark">*Підгрупа-ЧЕРНАЯ*</span>
+                <hr>
+                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+              </ul>
+              <ul id="">
+                <span class="badge badge-warning">*Підгрупа-ЖЕЛТАЯ*</span>
+                <hr>
+                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+              </ul>
+              <ul id="">
+                <span class="badge badge-success">*Підгрупа-ЗЕЛЕНАЯ*</span>
+                <hr>
+                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+              </ul>
+              <ul id="">
+                <span class="badge badge-danger">*Підгрупа-КРАСНАЯ*</span>
+                <hr>
+                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+              </ul>
+            </div>
+
+            <div class="col-sm">
+              <ul id="">
+                <span class="badge badge-primary">*Підгрупа-СИНЯЯ*</span>
+                <hr>
+                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+              </ul>
+              <ul id="">
+                <span class="badge badge-dark">*Підгрупа-ЧЕРНАЯ*</span>
+                <hr>
+                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+              </ul>
+              <ul id="">
+                <span class="badge badge-warning">*Підгрупа-ЖЕЛТАЯ*</span>
+                <hr>
+                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+              </ul>
+              <ul id="">
+                <span class="badge badge-success">*Підгрупа-ЗЕЛЕНАЯ*</span>
+                <hr>
+                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+              </ul>
+              <ul id="">
+                <span class="badge badge-danger">*Підгрупа-КРАСНАЯ*</span>
+                <hr>
+                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+              </ul>
+            </div>
+
+            <div class="col-sm">
+              <ul id="">
+                <span class="badge badge-primary">*Підгрупа-СИНЯЯ*</span>
+                <hr>
+                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+              </ul>
+              <ul id="">
+                <span class="badge badge-dark">*Підгрупа-ЧЕРНАЯ*</span>
+                <hr>
+                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+              </ul>
+              <ul id="">
+                <span class="badge badge-warning">*Підгрупа-ЖЕЛТАЯ*</span>
+                <hr>
+                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+              </ul>
+              <ul id="">
+                <span class="badge badge-success">*Підгрупа-ЗЕЛЕНАЯ*</span>
+                <hr>
+                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+              </ul>
+              <ul id="">
+                <span class="badge badge-danger">*Підгрупа-КРАСНАЯ*</span>
+                <hr>
+                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+              </ul>
+            </div> -->
+
+          </div>
+        </div>
 
 
 
