--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
             <li class="nav-item"><a class="nav-link" onclick="topFunction()" id="bank-tab" data-toggle="pill" href="#bank" role="tab" aria-controls="bank" aria-selected="false">Банкинг</a></li>
             <li class="nav-item"><a class="nav-link" onclick="topFunction()" id="komynal-tab" data-toggle="pill" href="#komynal" role="tab" aria-controls="komynal" aria-selected="false">Комуналка</a></li>
             <li class="nav-item"><a class="nav-link" onclick="topFunction()" id="drygoe-tab" data-toggle="pill" href="#drygoe" role="tab" aria-controls="drygoe" aria-selected="false">Другое</a></li>
-            <li class="nav-item"><a class="nav-link" onclick="topFunction()" id="gorodok-tab" data-toggle="pill" href="#gorodok" role="tab" aria-controls="gorodok" aria-selected="false"><font color="#14e6a3">Городок</font></a></li>
-            <li class="nav-item"><a class="nav-link" onclick="topFunction()" id="rek-tab" data-toggle="pill" href="#rek" role="tab" aria-controls="rek" aria-selected="false"><font color="#14e6a3">Реклама</font></a></li>
-            <li class="nav-item"><a class="nav-link" onclick="topFunction()" id="progsis-tab" data-toggle="pill" href="#progsis" role="tab" aria-controls="progsis" aria-selected="false"><!-- <font color="#14e6a3">!</font> --><img class="pict-menu" src="img/progsis004.png" alt="github"></a></li>
+            <li class="nav-item"><a class="nav-link" onclick="topFunction()" id="gorodok-tab" data-toggle="pill" href="#gorodok" role="tab" aria-controls="gorodok" aria-selected="false">Городок</a></li>
+            <li class="nav2-item"><a class="nav-link" onclick="topFunction()" id="rek-tab" data-toggle="pill" href="#rek" role="tab" aria-controls="rek" aria-selected="false">Реклама</a></li>
+            <li class="nav2-item"><a class="nav-link" onclick="topFunction()" id="progsis-tab" data-toggle="pill" href="#progsis" role="tab" aria-controls="progsis" aria-selected="false"><!-- тут може бути текст --><img class="pict-menu" src="img/progsis003.png" alt="github"></a></li>
           </ul>
 
         </div>
@@ -1321,7 +1321,7 @@
 
         <div class="col-sm footer-col">
           <div class="kolobok">
-            <a href="http://sis.at.ua/forum/14" target="_blank">!Обсуждение сайта!</a>
+            <a href="http://sis.at.ua/forum/14" target="_blank">ОБСУЖДЕНИЕ САЙТА</a>
           </div>
         </div>
 
@@ -1335,6 +1335,7 @@
 
         <div class="col-sm footer-col">
           <div class="kolobok">
+		  
             <!--LiveInternet counter-->
             <script type="text/javascript">
               document.write("<a href='//www.liveinternet.ru/click' " +
@@ -1365,6 +1366,14 @@
 
           </div>
         </div>
+		
+        <div class="col-sm footer-col">
+          <div class="kolobok">
+            <a href="http://sis.at.ua/index/0-3" target="_blank">ЗАДАТЬ ВОПРОС</a>
+          </div>
+        </div>
+		
+		
       </div>
     </div>
   </footer>
