--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
                 <span class="badge badge-dark">*Рынок*</span>
                 <hr>
                 <li><img class="icon" src="img/novaposhta.ua.ico" alt="github"><a href="https://novaposhta.ua/ru/tracking" target="_blank">novaposhta.ua</a></li>
+                <li><img class="icon" src="img/intime.ua.ico" alt="github"><a href="https://intime.ua/" target="_blank">intime.ua</a></li>
                 <li><img class="icon" src="img/olx.ua.ico" alt="github"><a href="https://www.olx.ua/" target="_blank">olx.ua</a></li>
                 <li><img class="icon" src="img/besplatka.ua.ico" alt="github"><a href="https://besplatka.ua/" target="_blank">besplatka.ua</a></li>
                 <li><img class="icon" src="img/shafa.ua.png" alt="github"><a href="https://shafa.ua/" target="_blank">shafa.ua</a></li>
