--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               <ul id="">
                 <span class="badge badge-dark">*Игры*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+ <!--                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li> -->
               </ul>
               <ul id="">
                 <span class="badge badge-dark">*Рынок*</span>
@@ -136,7 +136,7 @@
               <ul id="">
                 <span class="badge badge-dark">*Банкинг*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <!-- <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li> -->
               </ul>
             </div>
 
@@ -144,7 +144,7 @@
               <ul id="">
                 <span class="badge badge-dark">*Комуналка*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <!-- <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li> -->
               </ul>
               <ul id="">
                 <span class="badge badge-dark">*Другое*</span>
@@ -164,7 +164,7 @@
               <ul id="">
                 <span class="badge badge-dark">*Реклама*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <!-- <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li> -->
               </ul>
             </div>
 
