reliz edit media

--- a/index.html
+++ b/index.html
@@ -103,6 +103,12 @@
                 <span class="badge badge-dark">*Медиа*</span>
                 <hr>
                 <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/" target="_blank">Youtube</a></li>
+                <li><img class="icon" src="img/viks.tv.ico" alt="github"><a href="http://viks.tv/" target="_blank">viks.tv</a></li>
+                <li><img class="icon" src="img/1serial.club.png" alt="github"><a href="https://1serial.club/" target="_blank">1serial.club</a></li>
+                <li><img class="icon" src="img/kinokrad.co.ico" alt="github"><a href="http://kinokrad.co/" target="_blank">kinokrad.co</a></li>
+                <li><img class="icon" src="img/onlineradiobox.com.ico" alt="github"><a href="https://onlineradiobox.com/ua/" target="_blank">onlineradiobox.com</a></li>
+                <li><img class="icon" src="img/101.ru.ico" alt="github"><a href="http://101.ru/" target="_blank">101.ru</a></li>
+                <li><img class="icon" src="img/zaycev.fm.ico" alt="github"><a href="https://www.zaycev.fm/" target="_blank">zaycev.fm</a></li>
               </ul>
             </div>
 
@@ -127,7 +133,7 @@
                 <hr>
                 <li><img class="icon" src="img/letyshops.com.ico" alt="github"><a href="https://letyshops.com/ua/soc/sh-1?r=2739789" target="_blank">Letyshops.com</a><span class="opisi">Покупки дешевле</span></li>
                 <li><img class="icon" src="img/smarty.sale.ico" alt="github"><a href="https://smarty.sale/1197327" target="_blank">Smarty.sale</a><span class="opisi">Умные покупки</span></li>
-                <li><img class="icon" src="img/ek.ua.ico" alt="github"><a href="http://ek.ua/" target="_blank">ek.ua</a></li>
+                <li><img class="icon" src="img/bonprix.ua.ico" alt="github"><a href="https://letyshops.com/r/bonprix-ua-4qh7st5csygwc8" target="_blank">bonprix.ua</a></li>
                 <li><img class="icon" src="img/rozetka.com.ua.ico" alt="github"><a href="https://letyshops.com/r/rozetka-4qh7st5csxa88w" target="_blank">rozetka.com.ua</a></li>
                 <li><img class="icon" src="img/moyo.ua.ico" alt="github"><a href="https://letyshops.com/r/moyo-ua-4qh7st5csxogcc" target="_blank">moyo.ua</a></li>
                 <li><img class="icon" src="img/xiaomi.ua.ico" alt="github"><a href="https://letyshops.com/r/xiaomi-ua-4qh7st5csy680o" target="_blank">xiaomi.ua</a></li>
@@ -341,91 +347,80 @@
 
 
         <div class="tab-pane fade" id="media" role="tabpanel" aria-labelledby="media-tab">
-          <div class="row">раздел будет запущен/сформирован до 14.02.2019
+          <div class="row">
 
-            <!--             <div class="col-sm">
+            <div class="col-sm">
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-СИНЯЯ*</span>
+                <span class="badge badge-success">*Ваше любимое видео!*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/youtube.ico" alt="github"><a href="https://www.youtube.com/" target="_blank">youtube.com</a></li>
               </ul>
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЧЕРНАЯ*</span>
+                <span class="badge badge-success">*ТВ онлайн*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/viks.tv.ico" alt="github"><a href="http://viks.tv/" target="_blank">viks.tv</a></li>
+                <li><img class="icon" src="img/ok-tv.org.ico" alt="github"><a href="http://ok-tv.org/" target="_blank">ok-tv.org</a></li>
+                <li><img class="icon" src="img/tivix.co.ico" alt="github"><a href="http://tivix.co/" target="_blank">tivix.co</a></li>
+                <li><img class="icon" src="img/usetv.pp.ua.ico" alt="github"><a href="http://usetv.pp.ua/tv/" target="_blank">usetv.pp.ua</a></li>
               </ul>
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЖЕЛТАЯ*</span>
+                <span class="badge badge-success">*Кинотеатры*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЗЕЛЕНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-КРАСНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/megogo.net.ico" alt="github"><a href="https://megogo.net/ru" target="_blank">megogo.net</a></li>
+                <li><img class="icon" src="img/ivi.ru.ico" alt="github"><a href="https://www.ivi.ru/" target="_blank">ivi.ru</a></li>
               </ul>
             </div>
 
             <div class="col-sm">
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-СИНЯЯ*</span>
+                <span class="badge badge-success">*Все о Кино*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/kinopoisk.ru.ico" alt="github"><a href="https://www.kinopoisk.ru/" target="_blank">kinopoisk.ru</a><span class="opisi">нужен VPN</span></li>
               </ul>
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЧЕРНАЯ*</span>
+                <span class="badge badge-success">*Сериалы онлайн*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/seasonvar.ru.ico" alt="github"><a href="http://seasonvar.ru/" target="_blank">seasonvar.ru</a></li>
+                <li><img class="icon" src="img/1serial.club.png" alt="github"><a href="https://1serial.club/" target="_blank">1serial.club</a></li>
               </ul>
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЖЕЛТАЯ*</span>
+                <span class="badge badge-success">*Фильмы онлайн*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЗЕЛЕНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-КРАСНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/kinokrad.co.ico" alt="github"><a href="http://kinokrad.co/" target="_blank">kinokrad.co</a></li>
+                <li><img class="icon" src="img/kinotochka.club.ico" alt="github"><a href="http://kinotochka.club/" target="_blank">kinotochka.club</a></li>
+                <li><img class="icon" src="img/kinogo.cc.ico" alt="github"><a href="http://kinogo.cc/" target="_blank">kinogo.cc</a></li>
+                <li><img class="icon" src="img/filmix.co.ico" alt="github"><a href="https://filmix.co/" target="_blank">filmix.co</a></li>
+                <li><img class="icon" src="img/kinonix.net.ico" alt="github"><a href="https://kinonix.net/" target="_blank">kinonix.net</a></li>
+                <li><img class="icon" src="img/smotri-filmi.cc.ico" alt="github"><a href="http://smotri-filmi.cc/" target="_blank">smotri-filmi.cc</a></li>
               </ul>
             </div>
 
             <div class="col-sm">
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-СИНЯЯ*</span>
+                <span class="badge badge-success">*Радио онлайн*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/onlineradiobox.com.ico" alt="github"><a href="https://onlineradiobox.com/ua/" target="_blank">onlineradiobox.com</a></li>
+                <li><img class="icon" src="img/hitfm.ua.ico" alt="github"><a href="https://www.hitfm.ua/" target="_blank">hitfm.ua</a></li>
+                <li><img class="icon" src="img/101.ru.ico" alt="github"><a href="http://101.ru/" target="_blank">101.ru</a></li>
               </ul>
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЧЕРНАЯ*</span>
+                <span class="badge badge-success">*Музыка онлайн*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/zaycev.fm.ico" alt="github"><a href="https://www.zaycev.fm/" target="_blank">zaycev.fm</a></li>
+                <li><img class="icon" src="img/stopmusic.net.ico" alt="github"><a href="https://stopmusic.net/" target="_blank">stopmusic.net</a></li>
+                <li><img class="icon" src="img/muzofon.com.ico" alt="github"><a href="http://muzofon.com/" target="_blank">muzofon.com</a></li>
+                <li><img class="icon" src="img/vk.com.ico" alt="github"><a href="https://vk.com/mzk" target="_blank">vk.com/mzk</a><span class="opisi">нужен VPN</span></li>
+                <li><img class="icon" src="img/vk.com.ico" alt="github"><a href="https://vk.com/exclusive_muzic" target="_blank">vk.com/exclusive_muzic</a><span class="opisi">нужен VPN</span></li>
+                <li><img class="icon" src="img/vk.com.ico" alt="github"><a href="https://vk.com/hit_bit" target="_blank">vk.com/hit_bit</a><span class="opisi">нужен VPN</span></li>
+                <li><img class="icon" src="img/web.telegram.org.ico" alt="github"><a href="https://t.me/hit_beat" target="_blank">telegram/hit_bit</a><span class="opisi">нужен TELEGRAM</span></li>
               </ul>
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЖЕЛТАЯ*</span>
+                <span class="badge badge-success">*Музыка СКАЧАТЬ*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/xtremex3.com.ico" alt="github"><a href="http://xtremex3.com/" target="_blank">xtremex3.com</a></li>
+                <li><img class="icon" src="img/z1.fm.ico" alt="github"><a href="https://z1.fm/" target="_blank">z1.fm</a></li>
               </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЗЕЛЕНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-КРАСНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-            </div> -->
+            </div>
 
           </div>
         </div>
