--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <div class="col-sm">
               <ul id="">
                 <span class="badge badge-dark">*Игры*</span>
-                <hr>
+                <hr>будет заполнен до 16.02.2019 
  <!--                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li> -->
               </ul>
               <ul id="">
@@ -141,7 +141,7 @@
               </ul>
               <ul id="">
                 <span class="badge badge-dark">*Банкинг*</span>
-                <hr>
+                <hr>будет заполнен до 20.02.2019 
                 <!-- <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li> -->
               </ul>
             </div>
@@ -149,7 +149,7 @@
             <div class="col-sm">
               <ul id="">
                 <span class="badge badge-dark">*Комуналка*</span>
-                <hr>
+                <hr>будет заполнен до 18.02.2019 
                 <!-- <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li> -->
               </ul>
               <ul id="">
