--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
               <ul id="">
                 <span class="badge badge-dark">*Комуналка*</span>
                 <hr>будет заполнен до 18.02.2019 
-                <!-- <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li> -->
+                <li><img class="icon" src="img/ukrtelecom.ua.png" alt="github"><a href="https://new.ukrtelecom.ua/payment/#generate-bill" target="_blank">Укртелеком СЧЕТ</a></li>
               </ul>
               <ul id="">
                 <span class="badge badge-dark">*Другое*</span>
