--- a/index.html
+++ b/index.html
@@ -1317,7 +1317,7 @@
 
         <div class="col-sm footer-col">
           <div class="kolobok">
-            <a href="http://sis.at.ua/forum/14" target="_blank">ОБСУЖДЕНИЕ САЙТА</a>
+            <a href="http://zakladki.at.ua/" target="_blank">ОБСУЖДЕНИЕ САЙТА</a>
           </div>
         </div>
 
@@ -1365,7 +1365,7 @@
 		
         <div class="col-sm footer-col">
           <div class="kolobok">
-            <a href="http://sis.at.ua/index/0-3" target="_blank">ЗАДАТЬ ВОПРОС</a>
+            <a href="http://zakladki.at.ua/index/0-3" target="_blank">ЗАДАТЬ ВОПРОС</a>
           </div>
         </div>
 		
