--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
               <ul id="">
                 <span class="badge badge-dark">*Магазины*</span>
                 <hr>
-                <li><img class="icon" src="img/letyshops.com.ico" alt="github"><a href="https://letyshops.com/ua/soc/sh-1?r=2739789" target="_blank">Letyshops.com</a><span class="opisi">Покупки дешевле</span></li>
+                <li><img class="icon" src="img/letyshops.com.ico" alt="github"><a href="https://letyshops.com/ua/soc/sh-1?r=2739789" target="_blank">Letyshops.com</a><span class="opisi">Все дешевле</span></li>
                 <li><img class="icon" src="img/smarty.sale.ico" alt="github"><a href="https://smarty.sale/1197327" target="_blank">Smarty.sale</a><span class="opisi">Умные покупки</span></li>
                 <li><img class="icon" src="img/bonprix.ua.ico" alt="github"><a href="https://letyshops.com/r/bonprix-ua-4qh7st5csygwc8" target="_blank">bonprix.ua</a></li>
                 <li><img class="icon" src="img/rozetka.com.ua.ico" alt="github"><a href="https://letyshops.com/r/rozetka-4qh7st5csxa88w" target="_blank">rozetka.com.ua</a></li>
